# ML-II-prac-1

./: .gitignore  Practica.ipynb  README.md  final_model.keras  main.py  nbdime_config.json  practica-maki.ipynb  practica.html  pyproject.toml
examples/: 3. Softmax Regression with Mini-Batch.ipynb  4. One hidden layer.ipynb  6. Deep ANN with ReLU.ipynb  7. Tuned deep ANN.ipynb  Exercise 1 - Performance evaluation.ipynb  Exercise 2 - Learning rate.ipynb  Exercise 3 - Optimizer.ipynb  Exercise 4 - Initializer.ipynb  Exercise 5 - Regularizer L2.ipynb  Exercise 6 - Dropout.ipynb  clase1.ipynb  cv.txt
