[project]
name = "ml-ii-prac-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tensorflow[and-cuda]>=2.20.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
cpu = [
    "tensorflow-cpu>=2.20.0",
]
